# zcash-ledger

./: .gitignore  Makefile  README.md  install.sh
.github/workflows/: build_and_functional_tests.yml  guidelines_enforcer.yml
doc/: COMMANDS.md  CRYPTO.md  DESIGN.md  TRANSACTION.md
src/: address.c  constants.h  crypto.c  globals.h  io.c  main.c  sw.h  tx.h  types.h
src/apdu/: dispatcher.c  parser.c
src/common/: base58.c  bip32.c  buffer.c  format.c  read.c  varint.c  write.c
src/crypto/: address.c  address.h  bech32.c  bech32.h  blake2s.c  blake2s.h  chacha.c  chacha.h  debug.c  debug.h  f4jumble.c  f4jumble.h  ff1.c  ff1.h  fr.c  fr.h  jubjub.c  jubjub.h  key.c  key.h  mont.h  orchard.c  orchard.h  pallas.c  pallas.h  ph.h  phash.c  phash.h  prf.c  prf.h  sapling.c  sapling.h  sapling2.c  sapling2.h  sinsemilla.c  sinsemilla.h  transparent.c  transparent.h  tx.c  tx.h  (+4 more)
src/handler/: build.c  build.h  get_address.c  get_address.h  get_app_name.c  get_fvk.c  get_fvk.h  get_public_key.c  get_version.c  init_tx.c  init_tx.h  sign_tx.c  test_math.c  test_math.h  tx.c  tx.h
src/helper/: formatters.c  formatters.h  send_reponse.c  send_response.c  send_response.h
src/transaction/: deserialize.c  serialize.c  utils.c
src/ui/: bagl_display.c  display.h  menu.h  menu_bagl.c  menu_nbgl.c  nbgl_display_address.c  nbgl_display_transaction.c
src/ui/action/: validate.c  validate.h
tests/: test_appname_cmd.py  test_math.py  test_tx_sighash.py  test_version_cmd.py  test_view_keys.py  tx-tests.json
tests/application_client/: boilerplate_command_sender.py  boilerplate_response_unpacker.py  command_sender.py  response_unpacker.py
tests/tests-gen/: Cargo.toml
tests/tests-gen/src/: key.rs  main.rs  orchard.rs  sapling.rs  transparent.rs  transport.rs
unit-tests/: CMakeLists.txt
