[package]
name = "tests-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
incrementalmerkletree = "0.3.1"
orchard = "0.3.0"
zcash_primitives = { git = "https://github.com/hhanh00/librustzcash.git", rev = "e2fe0b8d386fad99e00d6135c5caf3cc04045646", features = [ "transparent-inputs" ] }
zcash_note_encryption = "0.3.0"
pasta_curves = "0.5"
jubjub = "0.10"
ff = "0.12"
secp256k1 = "0.21"
sha2 = "0.10"
ripemd = "0.1"

nonempty = "0.7"
rand = "0.8"
rand_chacha = "0.3"
byteorder = "1.4"
blake2b_simd = "1.0"
hex = "0.4"
hex-literal = "0.4"

reqwest = { version = "0.11.4", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"

[patch.crates-io]
halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
orchard = { git = "https://github.com/hhanh00/orchard.git", rev = "fa4ec31bd17b7b54e7474f270e8b5a4ae1a0de5c" }
#orchard = { path = "../../../../ywallet/orchard" }
